Fix sidebar overlap: switch from position:fixed to sticky so content flows correctly

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -14,10 +14,12 @@
   margin-bottom: 1em;
 
   @media screen and (min-width: $sidebar-screen-min-width) {
-    height: 100vh;
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
-    position: fixed;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     padding-top: $masthead-height;
+    align-self: flex-start;
   }
 
   @include breakpoint($large) {
